--- a/webificationnext/package.json
+++ b/webificationnext/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0-beta1",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "bootstrap": "^5.2.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5"
   }
 }
