--- a/webificationnext/package.json
+++ b/webificationnext/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "next": "12.2.5",
+    "bootstrap": "^5.2.3",
+    "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "axios": "^1.3.5",
+    "json-server": "^0.17.3"
   },
   "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0"
   }
 }
