--- a/webificationnext/package.json
+++ b/webificationnext/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,8 +13,10 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.3.5",
-    "json-server": "^0.17.3"
+    "tslint": "^6.1.3",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4",
+    "pocketbase": "^0.13.1"
   },
   "devDependencies": {
     "eslint": "8.38.0",
