--- a/webificationnext/package.json
+++ b/webificationnext/package.json
@@ -3,23 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "next": "13.3.0",
+    "bootstrap": "^5.3.1",
+    "next": "13.4.12",
+    "pocketbase": "^0.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tslib": "^2.6.1",
     "tslint": "^6.1.3",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "pocketbase": "^0.13.1"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0"
+    "@types/node": "20.4.6",
+    "@types/react": "18.2.18",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12"
   }
 }
